Fixed white-ish blurred shadow on dark mode

--- a/client/components/manager/index.scss
+++ b/client/components/manager/index.scss
@@ -25,6 +25,9 @@ body {
     display: flex;
     align-items: stretch;
     background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    @media (prefers-color-scheme: dark) {
+        background: #16181d;
+    }
 }
 
 #app {
